modificando para la entrega 1 de backend 2

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-URI_MONGODB=mongodb+srv://coder:coderpass@ecommerce-cluster.gdrzw6c.mongodb.net/ProyectoFinal?retryWrites=true&w=majority&appName=ecommerce-cluster
+URL_MONGODB=mongodb+srv://coder:coderpass@ecommerce-cluster.gdrzw6c.mongodb.net/ProyectoFinal?retryWrites=true&w=majority&appName=ecommerce-cluster
 PORT=8080
+JWT_SECRET=miClaveSecretaParaJWT
