--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 URL_MONGODB=mongodb+srv://coder:coderpass@ecommerce-cluster.gdrzw6c.mongodb.net/ProyectoFinal?retryWrites=true&w=majority&appName=ecommerce-cluster
 PORT=8080
 JWT_SECRET=miClaveSecretaParaJWT
+GMAIL_USER=sebastianstahler04@gmail.com
+GMAIL_APP_PASSWORD=bfgh nanz pmrx hmhr
